docs/7.57/md/abenabap_objects_statements.md
---
title: "ABAP Objects - Statements in ABAP Objects"
description: |
  The statements in ABAP Objects can be differentiated as follows: -   Statements for defining classes and interfaces(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendefining_classes_interfaces.htm) These statements define classes and interfaces and their components. They can be used
version: "7.57"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_objects_statements.htm"
abapFile: "abenabap_objects_statements.htm"
keywords: ["do", "if", "try", "method", "class", "abenabap", "objects", "statements"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Declarations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendeclarations.htm) →  [Declaration Statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_declarations.htm) →  [Classes and Interfaces (ABAP Objects)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenclasses_and_interfaces.htm) →  [ABAP Objects - Overview](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_objects_oview.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ABAP Objects - Statements in ABAP Objects, ABENABAP_OBJECTS_STATEMENTS, 757%0D%0A%0D%
0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

ABAP Objects - Statements in ABAP Objects

The statements in ABAP Objects can be differentiated as follows:

-   [Statements for defining classes and interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendefining_classes_interfaces.htm)
    
    These statements define classes and interfaces and their components. They can be used for local and global classes or interfaces.
    
-   [Statements for implementing methods](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendefining_methods.htm)
    
    These statements implement the functions of classes in methods.
    
-   [Statements in class pools and interface pools](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenclass_interace_pools.htm)
    
    In addition to the statements for defining the global class, statements for local declarations and implementations can also be used in [class pools](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenclass_pool_glosry.htm "Glossary Entry"). In [interface pools](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninterface_pool_glosry.htm "Glossary Entry"), only the global interface can be declared. The obsolete statement [TYPE-POOLS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abaptype-pools.htm) is also syntactically possible.
    

A language cleanup was performed in ABAP Objects. The [stricter ABAP syntax](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_objects_strict.htm) now applies to all statements in ABAP Objects.

Continue
[ABAP Objects - Statements for Defining Classes and Interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendefining_classes_interfaces.htm)
[ABAP Objects - Statements for Implementing Methods](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendefining_methods.htm)
[ABAP Objects - Statements in Class Pools and Interface Pools](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenclass_interace_pools.htm)
[ABAP Objects - Keywords](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenobjects_keywords.htm)
[ABAP Objects - Stricter Syntax Rules](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_objects_strict.htm)